Bug 32482 - [4.3 Regression] ICE verify_ssa failed
Summary: [4.3 Regression] ICE verify_ssa failed
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2007-06-24 12:04 UTC by Mike Stein
Modified: 2007-07-04 11:46 UTC (History)
4 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2007-07-03 12:00:26


Attachments
preprocessed source file (106.42 KB, text/plain)
2007-06-24 12:07 UTC, Mike Stein
Details
preprocessed source file from linux-2.6.20, delta-reduced (967 bytes, text/plain)
2007-07-01 12:45 UTC, Mike Stein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Stein 2007-06-24 12:04:07 UTC
Hello,
there seems to be a problem compiling the attached source file with i686-pc-linux-gnu-gcc:

  gcc -m32 -Wp,-MD,mm/.slab.o.d  -nostdinc -isystem /home/mstein/host-gcc/trunk-2007-06-24/bin/../lib/gcc/i686-pc-linux-gnu/4.3.0/include -D__KERNEL__ -Iinclude  -include include/linux/autoconf.h -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs -fno-strict-aliasing -fno-common -Os -pipe -msoft-float -mregparm=3 -mpreferred-stack-boundary=2  -march=i686 -mtune=generic -ffreestanding -maccumulate-outgoing-args -DCONFIG_AS_CFI=1  -Iinclude/asm-i386/mach-default -fno-omit-frame-pointer -fno-optimize-sibling-calls -g  -fno-stack-protector -Wdeclaration-after-statement -Wno-pointer-sign    -D"KBUILD_STR(s)=#s" -D"KBUILD_BASENAME=KBUILD_STR(slab)"  -D"KBUILD_MODNAME=KBUILD_STR(slab)" -c -o mm/.tmp_slab.o mm/slab.c

mm/slab.c: In function '__cache_shrink':
mm/slab.c:2476: error: expected an SSA_NAME object
mm/slab.c:2476: error: in statement
# VUSE <SFT.1676> { SFT.1676 }
D.24655_100 = node_online_map.bits[0];
mm/slab.c:2476: internal compiler error: verify_ssa failed
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

host gcc -v
Using built-in specs.
Target: i686-pc-linux-gnu
Configured with: /home/mstein/svn/trunk/configure --enable-languages=c --disable-nls --prefix=/n/07/mstein/host-gcc/trunk-2007-06-24
Thread model: posix
gcc version 4.3.0 20070623 (experimental)

Tested revion: 125975
Comment 1 Mike Stein 2007-06-24 12:07:34 UTC
Created attachment 13777 [details]
preprocessed source file
Comment 2 Mike Stein 2007-07-01 12:45:57 UTC
Created attachment 13814 [details]
preprocessed source file from linux-2.6.20, delta-reduced
Comment 3 Mikkel Lauritsen 2007-07-03 10:59:38 UTC
I get what I think is the exact same problem:

mm/slab.c:2243: error: expected an SSA_NAME object
mm/slab.c:2243: error: in statement
# VUSE <SFT.956> { SFT.956 }
D.17707_131 = node_online_map.bits[0];
mm/slab.c:2243: internal compiler error: verify_ssa failed
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

gcc -v
Using built-in specs.
Target: vax-linux-uclibc
Configured with: /home/mikkel/linux-vax/build/build-20070702-163607-UTC-vax-linux-uclibc/src/gcc/configure --disable-multilib --with-newlib --disable-nls --enable-threads=no --disable-threads --enable-symvers=gnu --enable-__cxa_atexit --disable-shared --target=vax-linux-uclibc --prefix=/home/mikkel/linux-vax/build/build-20070702-163607-UTC-vax-linux-uclibc/install/usr --enable-languages=c,c++
Thread model: single
gcc version 4.3.0 20070702 (experimental)

The source is definitely available, but as it's the same file (although from another version of the Linux kernel) as that of the original bug reporter it seems to be of little use.
Comment 4 Richard Biener 2007-07-03 12:00:26 UTC
Mine.
Comment 5 Richard Biener 2007-07-04 11:45:10 UTC
Subject: Bug 32482

Author: rguenth
Date: Wed Jul  4 11:44:58 2007
New Revision: 126314

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=126314
Log:
2007-07-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/32482
	* tree-ssa-ifcombine.c (recognize_single_bit_test): Use the
	original ssa name if we didn't find a shift expression.
	Fix shift constant for bit zero test.

	* gcc.c-torture/compile/pr32482.c: New testcase.

Added:
    trunk/gcc/testsuite/gcc.c-torture/compile/pr32482.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-ifcombine.c

Comment 6 Richard Biener 2007-07-04 11:46:44 UTC
Fixed.